[gd_scene load_steps=6 format=3 uid="uid://de33bfmp2w6jc"]

[ext_resource type="Script" path="res://Scenes/UI/PauseMenu.gd" id="1_kf0y2"]
[ext_resource type="Texture2D" uid="uid://dpbirhid6jhme" path="res://Art/MiscSprites/PauseMenuHighlight.png" id="2_ywya3"]
[ext_resource type="FontFile" uid="uid://bsdypfjjnmwjc" path="res://Fonts/Nunito/static/Nunito-Bold.ttf" id="3_7cjo4"]
[ext_resource type="FontFile" uid="uid://cp06hnbot6cb7" path="res://Fonts/Nunito/static/Nunito-Medium.ttf" id="4_vw1xm"]
[ext_resource type="PackedScene" uid="uid://dq5ntdtxdyc8c" path="res://Scenes/UI/settings_menu.tscn" id="5_iy68b"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 2
visible = false
script = ExtResource("1_kf0y2")

[node name="background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.847059, 0.623529, 0.419608, 0.615686)

[node name="Highlighter" type="NinePatchRect" parent="."]
modulate = Color(0.933333, 0.780392, 0.65098, 1)
offset_left = 726.0
offset_top = 401.0
offset_right = 1194.0
offset_bottom = 496.0
texture = ExtResource("2_ywya3")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.847059, 0.623529, 0.419608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_7cjo4")
theme_override_font_sizes/font_size = 60
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="HSeparator" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
size_flags_stretch_ratio = 2.0

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(468, 93)
layout_mode = 2
theme_override_colors/font_color = Color(0.847059, 0.623529, 0.419608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_vw1xm")
theme_override_font_sizes/font_size = 40
text = "Resume Game"

[node name="RestartLevel" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(468, 93)
layout_mode = 2
theme_override_colors/font_color = Color(0.847059, 0.623529, 0.419608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_vw1xm")
theme_override_font_sizes/font_size = 40
text = "Restart Level"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(468, 93)
layout_mode = 2
theme_override_colors/font_color = Color(0.847059, 0.623529, 0.419608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_vw1xm")
theme_override_font_sizes/font_size = 40
text = "Settings
"

[node name="QuitToMenu" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(468, 93)
layout_mode = 2
theme_override_colors/font_color = Color(0.847059, 0.623529, 0.419608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_vw1xm")
theme_override_font_sizes/font_size = 40
text = "Quit To Main Menu"

[node name="SettingsMenu" parent="." instance=ExtResource("5_iy68b")]
visible = false
anchors_preset = -1
anchor_left = 0.078
anchor_top = 0.093
anchor_right = 0.911
anchor_bottom = 0.926
offset_left = -149.76
offset_top = -100.44
offset_right = -949.12
offset_bottom = -550.08

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartLevel" to="." method="_on_restart_level_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
